# vox-agent

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml  run.py
migrations/: 001_init.sql  002_evaluations.sql  README.md
scripts/: init_db.py
src/voxagent/: agent.py  cli.py  config.py  db.py  evaluator.py  llm.py  logging_config.py  main.py  memory.py  prompts.py  schemas.py
src/voxagent/providers/: anthropic_provider.py  gemini_provider.py  openai_provider.py
tests/: conftest.py  test_agent.py  test_anthropic_provider_judge.py  test_evaluator_heuristics.py  test_evaluator_judge.py  test_memory.py  test_smoke.py
